[gd_scene load_steps=5 format=3 uid="uid://c4r6ushs3mnvy"]

[ext_resource type="Script" path="res://scripts/player_dialogue.gd" id="1_rmp0h"]
[ext_resource type="Texture2D" uid="uid://lpbp3l4l3rp5" path="res://assets/UI/input_square.png" id="1_rr7me"]
[ext_resource type="FontFile" uid="uid://d4afo47fml43o" path="res://assets/04B_30__.TTF" id="3_hq0kf"]

[sub_resource type="LabelSettings" id="LabelSettings_cqxfi"]
font_size = 6
font_color = Color(0, 0, 0, 1)

[node name="player_dialogue" type="Node2D"]
scale = Vector2(0.987399, 1.00907)
script = ExtResource("1_rmp0h")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = 172.0
offset_top = -38.0
offset_right = 212.0
offset_bottom = 2.0

[node name="next_char" type="Timer" parent="."]

[node name="next_message" type="Timer" parent="."]

[node name="talking" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 44.0
offset_bottom = 22.0

[node name="talking_bg" type="Sprite2D" parent="talking"]
scale = Vector2(1.57244, 0.729051)
texture = ExtResource("1_rr7me")

[node name="talking_message" type="Label" parent="talking"]
layout_mode = 0
offset_left = -44.0
offset_top = -19.0
offset_right = 44.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("3_hq0kf")
label_settings = SubResource("LabelSettings_cqxfi")
autowrap_mode = 2

[connection signal="timeout" from="next_char" to="." method="_on_next_char_timeout"]
[connection signal="timeout" from="next_message" to="." method="_on_next_message_timeout"]
